--- a/front_matter/critical_report.tex
+++ b/front_matter/critical_report.tex
@@ -4,7 +4,12 @@
 
 \eesTitlePage
 
-\eesCriticalReport{}
+\eesCriticalReport{
+  1 & 25 & vl 1 & 11th \sixteenthNote\ in \B1: \flat e′16 \\
+    & 25 & vl 2 & 3rd \sixteenthNote\ in \B1: d′16 \\
+    & 26 & vl 1 & 11th \sixteenthNote\ in \B1: g″16 \\
+    & 26 & vl 2 & 11th \sixteenthNote\ in \B1: \flat e″16 \\
+}
 
 \eesToc{}
 
