--- a/front_matter/critical_report.tex
+++ b/front_matter/critical_report.tex
@@ -5,12 +5,12 @@
 \eesTitlePage
 
 \eesCriticalReport{
-  – & –  & trb  & In \B1, trb 1 and 2 only appear in the following movements: . In this edition, trb 1 and 2 voices have also been added for the remaining movements, where they play unison with A tutti and T tutti, respectively. \\
+  – & –  & trb  & In \B1 and \B2, trb 1 and 2 only appear in the following movements: . In this edition, trb 1 and 2 voices have also been added for the remaining movements, where they play unison with A tutti and T tutti, respectively. \\
   – & –  / vla  &
-  1 & 25 & vl 1 & 11th \sixteenthNote\ in \B1: \flat e′16 \\
-    & 25 & vl 2 & 3rd \sixteenthNote\ in \B1: d′16 \\
-    & 26 & vl 1 & 11th \sixteenthNote\ in \B1: g″16 \\
-    & 26 & vl 2 & 11th \sixteenthNote\ in \B1: \flat e″16 \\
+  1 & 25 & vl 1 & 11th \sixteenthNote\ in \B1 and \B2: \flat e′16 \\
+    & 25 & vl 2 & 3rd \sixteenthNote\ in \B1 and \B2: d′16 \\
+    & 26 & vl 1 & 11th \sixteenthNote\ in \B1 and \B2: g″16 \\
+    & 26 & vl 2 & 11th \sixteenthNote\ in \B1 and \B2: \flat e″16 \\
 }
 
 \eesToc{}
