--- a/front_matter/critical_report.tex
+++ b/front_matter/critical_report.tex
@@ -11,6 +11,7 @@
     & 25 & vl 2 & 3rd \sixteenthNote\ in \B1 and \B2: d′16 \\
     & 26 & vl 1 & 11th \sixteenthNote\ in \B1 and \B2: g″16 \\
     & 26 & vl 2 & 11th \sixteenthNote\ in \B1 and \B2: \flat e″16 \\
+  3 & 9  & vla  & 3rd \sixteenthNote\ in \B1: g16 \\
 }
 
 \eesToc{}
