--- a/front_matter/critical_report.tex
+++ b/front_matter/critical_report.tex
@@ -12,6 +12,8 @@
     & 26 & vl 1 & 11th \sixteenthNote\ in \B1 and \B2: g″16 \\
     & 26 & vl 2 & 11th \sixteenthNote\ in \B1 and \B2: \flat e″16 \\
   3 & 9  & vla  & 3rd \sixteenthNote\ in \B1: g16 \\
+  3 & 74 & vla  & 3rd \quarterNote\ in \B1 and \B2: \flat e′8–\flat e′8 \\
+    & 76 & vl   & 2nd \eighthNote\ in \B1 and \B2: c″8 \\
 }
 
 \eesToc{}
