iuste iudex to huic ergo

--- a/front_matter/critical_report.tex
+++ b/front_matter/critical_report.tex
@@ -5,15 +5,17 @@
 \eesTitlePage
 
 \eesCriticalReport{
-  – & –  & trb  & In \B1 and \B2, trb 1 and 2 only appear in the following movements: \textit{Tuba mirum} . In this edition, trb 1 and 2 voices have also been added for the remaining movements, where they play unison with A tutti and T tutti, respectively. \\
-  – & –  / vla  &
-  1 & 25 & vl 1 & 11th \sixteenthNote\ in \B1 and \B2: \flat e′16 \\
-    & 25 & vl 2 & 3rd \sixteenthNote\ in \B1 and \B2: d′16 \\
-    & 26 & vl 1 & 11th \sixteenthNote\ in \B1 and \B2: g″16 \\
-    & 26 & vl 2 & 11th \sixteenthNote\ in \B1 and \B2: \flat e″16 \\
-  3 & 9  & vla  & 3rd \sixteenthNote\ in \B1: g16 \\
-  3 & 74 & vla  & 3rd \quarterNote\ in \B1 and \B2: \flat e′8–\flat e′8 \\
-    & 76 & vl   & 2nd \eighthNote\ in \B1 and \B2: c″8 \\
+  – & –   & trb  & In \B1 and \B2, trb 1 and 2 only appear in the following movements: \textit{Tuba mirum} . In this edition, trb 1 and 2 voices have also been added for the remaining movements, where they play unison with A tutti and T tutti, respectively. \\
+  – & –   & vla  &
+  1 & 25  & vl 1 & 11th \sixteenthNote\ in \B1 and \B2: \flat e′16 \\
+    & 25  & vl 2 & 3rd \sixteenthNote\ in \B1 and \B2: d′16 \\
+    & 26  & vl 1 & 11th \sixteenthNote\ in \B1 and \B2: g″16 \\
+    & 26  & vl 2 & 11th \sixteenthNote\ in \B1 and \B2: \flat e″16 \\
+  3 & 9   & vla  & 3rd \sixteenthNote\ in \B2: g16 \\
+  3 & 74  & vla  & 3rd \quarterNote\ in \B1 and \B2: \flat e′8–\flat e′8 \\
+    & 76  & vl   & 2nd \eighthNote\ in \B1 and \B2: c″8 \\
+    & 156 & vl 2 & bar in \B2 repetition of bar 155 \\
+    & 210 & vl 2 & 3rd \quarterNote\ in \B2: g′8–g′8 \\
 }
 
 \eesToc{}
