offertorium to agnus dei

--- a/front_matter/critical_report.tex
+++ b/front_matter/critical_report.tex
@@ -5,17 +5,25 @@
 \eesTitlePage
 
 \eesCriticalReport{
-  – & –   & trb  & In \B1 and \B2, trb 1 and 2 only appear in the following movements: \textit{Tuba mirum} . In this edition, trb 1 and 2 voices have also been added for the remaining movements, where they play unison with A tutti and T tutti, respectively. \\
-  – & –   & vla  &
-  1 & 25  & vl 1 & 11th \sixteenthNote\ in \B1 and \B2: \flat e′16 \\
-    & 25  & vl 2 & 3rd \sixteenthNote\ in \B1 and \B2: d′16 \\
-    & 26  & vl 1 & 11th \sixteenthNote\ in \B1 and \B2: g″16 \\
-    & 26  & vl 2 & 11th \sixteenthNote\ in \B1 and \B2: \flat e″16 \\
-  3 & 9   & vla  & 3rd \sixteenthNote\ in \B2: g16 \\
-  3 & 74  & vla  & 3rd \quarterNote\ in \B1 and \B2: \flat e′8–\flat e′8 \\
-    & 76  & vl   & 2nd \eighthNote\ in \B1 and \B2: c″8 \\
-    & 156 & vl 2 & bar in \B2 repetition of bar 155 \\
-    & 210 & vl 2 & 3rd \quarterNote\ in \B2: g′8–g′8 \\
+  – & –    & trb  & In \B1 and \B2, trb 1 and 2 only appear in the following movements: \textit{Tuba mirum}, \textit{Offertorium} . In this edition, trb 1 and 2 voices have also been added for the remaining movements, where they play unison with A tutti and T tutti, respectively. \\
+  1 & 25   & vl 1 & 11th \sixteenthNote\ in \B1 and \B2: \flat e′16 \\
+    & 25   & vl 2 & 3rd \sixteenthNote\ in \B1 and \B2: d′16 \\
+    & 26   & vl 1 & 11th \sixteenthNote\ in \B1 and \B2: g″16 \\
+    & 26   & vl 2 & 11th \sixteenthNote\ in \B1 and \B2: \flat e″16 \\
+  3 & 9    & vla  & 3rd \sixteenthNote\ in \B2: g16 \\
+  3 & 74   & vla  & 3rd \quarterNote\ in \B1 and \B2: \flat e′8–\flat e′8 \\
+    & 76   & vl   & 2nd \eighthNote\ in \B1 and \B2: c″8 \\
+    & 156  & vl 2 & bar in \B2 repetition of bar 155 \\
+    & 210  & vl 2 & 3rd \quarterNote\ in \B2: g′8–g′8 \\
+  4 & 1–36 & org  & The directives “Fagotto” (in bars 3, 7, 11, and 17) and “senza Fagotto” (in bar 5), which appear in both \B1 and \B2, have been omitted in this edition. \\
+    & 30   & vla  & in \B2 unison with vl 2 (one octave lower) \\
+  5 & –    & vla  & voice added by editor \\
+  6 & –    & vla  & voice added by editor \\
+    & 15   & T    & 4th \quarterNote\ in \B1: g4 \\
+    & 15   & B    & 4th \quarterNote\ in \B1: B4 \\
+    & 16   & T    & 2nd \quarterNote\ in \B1: f8.–f16 \\
+    & 16   & B    & 2nd \quarterNote\ in \B1: A8.–A16 \\
+  7 & 12   & vla  & 4th \eighthNote\ in \B1 \flat e′8 \\
 }
 
 \eesToc{}
